@@ -20,7 +20,8 @@ namespace Saritasa.Tools.Common.Extensions
         /// <param name="target">Target dictionary.</param>
         /// <param name="key">Key.</param>
         /// <param name="defaultValue">Default value.</param>
-        public static TValue GetValueDefault<TKey, TValue>(this IDictionary<TKey, TValue> target, TKey key, TValue defaultValue)
+        public static TValue GetValueDefault<TKey, TValue>(this IDictionary<TKey, TValue> target, TKey key,
+            TValue defaultValue = default(TValue))
         {
             TValue value;
             bool success = target.TryGetValue(key, out value);
