@@ -14,7 +14,7 @@
       "url": "https://github.com/Saritasa/SaritasaTools"
     },
     "summary": "Unit of work, repository implementation for Entity Framework Core.",
-    "tags": [ "unit of work", "repository", "domain events" ]
+    "tags": [ "unit of work", "repository" ]
   },
   "dependencies": {
     "Saritasa.Tools.Domain": "*"
@@ -25,7 +25,7 @@
         "System.Data": ""
       },
       "dependencies": {
-        "Microsoft.EntityFrameworkCore": "1.0.1"
+        "Microsoft.EntityFrameworkCore": "1.1.0"
       }
     },
     "net461": {
@@ -33,19 +33,19 @@
         "System.Data": ""
       },
       "dependencies": {
-        "Microsoft.EntityFrameworkCore": "1.0.1"
+        "Microsoft.EntityFrameworkCore": "1.1.0"
       }
     },
     "netcoreapp1.0": {
       "dependencies": {
-        "Microsoft.EntityFrameworkCore": "1.0.1",
-        "Microsoft.NETCore.App": "1.0.1"
+        "Microsoft.EntityFrameworkCore": "1.1.0",
+        "Microsoft.NETCore.App": "1.1.0"
       }
     },
     "netstandard1.6": {
       "dependencies": {
-        "NETStandard.Library": "1.6.0",
-        "Microsoft.EntityFrameworkCore": "1.0.1"
+        "NETStandard.Library": "1.6.1",
+        "Microsoft.EntityFrameworkCore": "1.1.0"
       }
     }
   },
