@@ -1,7 +1,7 @@
 ﻿// Copyright (c) 2015-2016, Saritasa. All rights reserved.
 // Licensed under the BSD license. See LICENSE file in the project root for full license information.
 
-#if NETCOREAPP1_0 || NETSTANDARD1_6
+#if NETCOREAPP1_0 || NETCOREAPP1_1 || NETSTANDARD1_6
 namespace Saritasa.Tools.Emails
 {
     using System;
